# sssh

./: .gitignore  Cargo.toml  README.md  config.yaml.example
.github/workflows/: release.yml
src/: main.rs
