[package]
name = "sssh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
minio = "0.4"
bytes = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rpassword = "7"
dirs = "5"
libc = "0.2"
which = "6"
zeroize = "1"
